dynamic route parameters working

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,10 @@
   <groupId>org.sorting</groupId>
   <artifactId>AdvancedSortingWA</artifactId>
   <packaging>war</packaging>
+  <properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
+  </properties>
   <version>1.0-SNAPSHOT</version>
   <name>AdvancedSortingWA Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -61,6 +65,19 @@
     </dependency>
   </dependencies>
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <!-- put your configurations here -->
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+
     <finalName>AdvancedSortingWA</finalName>
   </build>
 </project>
